Added censor microservice client

--- a/pkg/config/envs/dev.env
+++ b/pkg/config/envs/dev.env
@@ -3,4 +3,5 @@ PORT=:3000
 AUTH_SVC_URL=localhost:50051
 GONEWS_SVC_URL=localhost:50052
 COMMENT_SVC_URL=localhost:50053
+CENSOR_SVC_URL=localhost:50054
 CENSORED=qwerty,йцукен,zxvbnm
