Changes for Docker

--- a/pkg/config/envs/dev.env
+++ b/pkg/config/envs/dev.env
@@ -1,5 +1,5 @@
 API_GATEWAY_ADDR=localhost
-PORT=:3000
+PORT=3000
 AUTH_SVC_URL=localhost:50051
 GONEWS_SVC_URL=localhost:50052
 COMMENT_SVC_URL=localhost:50053
