Added CORS config added fronted url in config

--- a/pkg/config/envs/dev.env
+++ b/pkg/config/envs/dev.env
@@ -5,3 +5,4 @@ GONEWS_SVC_URL=localhost:50052
 COMMENT_SVC_URL=localhost:50053
 CENSOR_SVC_URL=localhost:50054
 CENSORED=qwerty,йцукен,zxvbnm
+FRONTEND_URL=http://localhost:8080
